Fix table-pricing_head not showing proper background color relative to background

--- a/src/assets/scss/pages/pricing/pricing.scss
+++ b/src/assets/scss/pages/pricing/pricing.scss
@@ -1,24 +1,10 @@
-.tablehead_icon-wrapper.pricing-portfolio-nth-child-1 {
-    &:hover {
-        .tooltip-wrapper.pricing-portfolio-nth-child-1 {
-            display: block;
-        }
-    }
-}
-
-.tablehead_icon-wrapper.pricing-portfolio-nth-child-2 {
-    &:hover {
-        .tooltip-wrapper.pricing-portfolio-nth-child-2 {
-            display: block;
-        }
-    }
-}
-
 .section_pricing-and-features {
     .table-pricing {
         &_column:hover {
-            .table-pricing.background-color-grey {
-                background-color: white;
+            .table-pricing {
+                &_head.background-color-grey {
+                    background-color: white;
+                }
             }
         }
     }
